--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,43 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+    <color name="neo_300">#4bd09f</color>
+    <color name="neo_500">#00ba76</color>
+    <color name="neo_600">#00aa6a</color>
+    <color name="neo_700">#00985d</color>
+    <color name="neo_800">#008650</color>
+    <color name="neo_900">#006639</color>
+
+    <color name="pro_300">#46bdff</color>
+    <color name="pro_500">#009dff</color>
+    <color name="pro_600">#008eff</color>
+    <color name="pro_700">#0079ff</color>
+    <color name="pro_800">#0066ff</color>
+    <color name="pro_900">#2341e0</color>
+
+    <color name="top_300">#9866f9</color>
+    <color name="top_500">#5e00f5</color>
+    <color name="top_600">#4f00ef</color>
+    <color name="top_700">#3700e7</color>
+    <color name="top_800">#0600e2</color>
+    <color name="top_900">#0000de</color>
+
+    <color name="biz_300">#f0659a</color>
+    <color name="diz_500">#eb236c</color>
+    <color name="biz_600">#da2169</color>
+    <color name="biz_700">#c31e63</color>
+    <color name="biz_800">#ae1b5e</color>
+    <color name="biz_900">#881655</color>
+
+    <color name="black_50">#F5F5F5</color>
+    <color name="black_200">#D9D9D9</color>
+    <color name="black_500">#7b7b7b</color>
+    <color name="black_600">#555555</color>
+    <color name="black_700">#434343</color>
+    <color name="black_800">#262626</color>
+    <color name="black_900">#000000</color>
     <color name="black">#FF000000</color>
+
     <color name="white">#FFFFFFFF</color>
 </resources>
